syntax = "proto3";

//option go_package= "github.com/jamoreno22/namenode";

package lab2;

service NameNode {

    rpc GetBookInfo(Book) returns (Message) {}
    rpc WriteLog(stream Proposal) returns (Message) {}
    //Centralizado
    rpc SendProposal(stream Proposal) returns (stream Proposal) {}
    rpc GenerateProposal(stream Proposal) returns (stream Proposal) {}

}

message Book {
    string name = 2;
    int32 parts = 3;
    repeated Chunk chunks =1;
}

message Chunk{
    string name = 1;
    bytes data = 2;
}

message Message {
    string text = 1; 
}

message Proposal {
    string ip = 1;
    Chunk chunk = 2;
}